--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,8 +1,4 @@
-jobs:
-  stackhawk-hawkscan:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: stackhawk/hawkscan-action@v2.1.0
-      with:
-        apiKey: ${{ secrets.hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }}
+app:
+  applicationId: c1a545a9-5c83-462c-b58a-61cbd0306fbb
+  env: Development
+  host: http://localhost:9000
