--- a/.github/workflows/stackhawk-analysis.yml
+++ b/.github/workflows/stackhawk-analysis.yml
@@ -9,20 +9,12 @@ on:
     - cron: '35 11 * * 5'
 
 jobs:
-  stackhawk:
-    name: StackHawk
-    runs-on: ubuntu-20.04
+  stackhawk-hawkscan:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Start your service
-        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
-
-      - name: Run HawkScan
-        uses: stackhawk/hawkscan-action@v2
-        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
-        with:
-          apiKey: ${{ secrets.HAWK_API_KEY }}
-          codeScanningAlerts: true
-          githubToken: ${{ github.token }}
+    - uses: actions/checkout@v2
+    - uses: stackhawk/hawkscan-action@v2.1.0
+    with:
+      installCLIOnly: true
+    - name: Run CLI Scan
+      run: hawk --api-key=${{ secrets.hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }} scan
