--- a/.github/workflows/stackhawk-analysis.yml
+++ b/.github/workflows/stackhawk-analysis.yml
@@ -26,13 +26,31 @@
 # 5.  Update the "Start your service" Step: Update the "Start your service" step in the StackHawk workflow below to
 #     start your service so that it can be scanned with the "Run HawkScan" step.
 
+name: "StackHawk"
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '35 11 * * 5'
+
 jobs:
-  stackhawk-hawkscan:
-    runs-on: ubuntu-latest
+  stackhawk:
+    name: StackHawk
+    runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-    - uses: stackhawk/hawkscan-action@v2.1.0
-    with:
-      installCLIOnly: true
-    - name: Run CLI Scan
-      run: hawk --api-key=${{ secrets.hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }} scan
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Start your service
+        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
+
+      - name: Run HawkScan
+        uses: stackhawk/hawkscan-action@v2
+        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
+        with:
+          apiKey: ${{ secrets.hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }}
+          codeScanningAlerts: true
+          githubToken: ${{ github.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 }}
