--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,4 +1,20 @@
+# -- stackhawk configuration for snyklab --
 app:
-  applicationId: c1a545a9-5c83-462c-b58a-61cbd0306fbb
-  env: Development
-  host: http://localhost:9000
+  # -- An applicationId obtained from the StackHawk platform. --
+  applicationId: c1a545a9-5c83-462c-b58a-61cbd0306fbb # (required)
+  # -- The environment for the applicationId defined in the StackHawk platform. --
+  env: Development # (required)
+  # -- The url of your application to scan --
+  host:  # (required)
+
+
+# -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
+  # Configuration Docs: https://docs.stackhawk.com/hawkscan/configuration/
+
+# -- If Authenticated Scanning is needed, add here --
+  # Authenticated Scanning Docs: https://docs.stackhawk.com/hawkscan/authenticated-scanning.html
+  # Authenticated Scanning Repo: https://github.com/kaakaww/scan-configuration/tree/main/Authentication
+
+# -- Help Section --
+  # Docs: https://docs.stackhawk.com/
+  # Contact Support: support@stackhawk.com
