--- a/.github/workflows/stackhawk-analysis.yml
+++ b/.github/workflows/stackhawk-analysis.yml
@@ -51,6 +51,6 @@ jobs:
         uses: stackhawk/hawkscan-action@v2
         continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
         with:
-          apiKey: ${{ secrets.hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }}
+          apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
-          githubToken: ${{ github.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 }}
+          githubToken: ${{ github.token }}
