--- a/.github/workflows/HawkScan.yml
+++ b/.github/workflows/HawkScan.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@v2
         with:
-          apiKey: ${{ hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }}
+          apiKey: ${{ qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }}
