--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,4 +1,23 @@
-app:
-  applicationId: c1a545a9-5c83-462c-b58a-61cbd0306fbb
-  host: http://localhost:9000
-  env: Development
+name: "stackhawk"
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  stackhawk:
+    name: stackhawk
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run HawkScan
+        uses: stackhawk/hawkscan-action@v2
+        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
+        with:
+          apiKey: ${{ secrets.hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }}
+          codeScanningAlerts: true
+          githubToken: ${{ github.token.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 }}
