--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,4 +1,28 @@
-app:
-  applicationId: c1a545a9-5c83-462c-b58a-61cbd0306fbb
-  host: http://localhost:9000
-  env: Development
+name: "StackHawk"
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '35 11 * * 5'
+
+jobs:
+  stackhawk:
+    name: StackHawk
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Start your service
+        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
+
+      - name: Run HawkScan
+        uses: stackhawk/hawkscan-action@v2
+        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
+        with:
+          apiKey: ${{ secrets.HAWK_API_KEY }}
+          codeScanningAlerts: true
+          githubToken: ${{ github.token }}
