--- a/.github/workflows/HawkScan.yml
+++ b/.github/workflows/HawkScan.yml
@@ -1,12 +1,32 @@
 name: HawkScan
 on:
-  push:
-  pull_request:
+  repository_dispatch:
+    types: [integration-initial-test]
 jobs:
-  stackhawk-hawkscan:
+  hawkscan:
+    name: HawkScan
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: stackhawk/hawkscan-action@v2.1.0
-      with:
-        apiKey: ${{ secrets.hawk.qNsKNu3F7ErVUhLVFqVE.NddZYji1fNaC7SB68yq4 }}
+      - uses: actions/checkout@v2
+      - name: Create ${{ github.event.client_payload.repoName }} app directory
+        run: mkdir -p common/build/integrationTests/hawkscan-action/apps/${{ github.event.client_payload.repoName }}
+      - name: Navigate to ${{ github.event.client_payload.repoName }} app directory
+        run: cd common/build/integrationTests/hawkscan-action/apps/${{ github.event.client_payload.repoName }}
+      - name: Checkout vulny repo
+        run: git clone https://github.com/${{ github.event.client_payload.repoOrg }}/${{ github.event.client_payload.repoName }}.git
+      - name: Run ${{ github.event.client_payload.repoName }}
+        run: docker-compose up -d
+      - name: Navigate to repo root directory
+        run: cd /home/runner/work/${{ github.event.client_payload.repoName }}/${{ github.event.client_payload.repoName }}
+      - name: Run HawkScan
+        id: run-hawkscan
+        uses: stackhawk/hawkscan-action@main
+        with:
+          apiKey: ${{ secrets.HAWK_API_KEY }}
+          configurationFiles: ${{ github.event.client_payload.configFile }}
+          sourceURL: ${{ github.event.client_payload.hawkscanSourceUrl }}
+          version: ${{ github.event.client_payload.hawkscanVersion }}
+          verbose: ${{ github.event.client_payload.verbose }}
+        env:
+          # APPLICATION_ID: ${{ github.event.client_payload.appId }}
+          APP_ID: ${{ github.event.client_payload.appId }}
