--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start your service
-        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
+        run: ./your-service.sh &  
 
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@v2
